--- a/components/public/Makefile.in
+++ b/components/public/Makefile.in
@@ -10,6 +10,8 @@ XPIDL_MODULE  = ubiquity
 
 XPI_NAME = ubiquity
 
-XPIDLSRCS = nsIUbiquity.idl
+XPIDLSRCS = nsIUbiquity.idl \
+            nsIUbiquityDesktopIntegration.idl \
+            $(NULL)
 
 include $(topsrcdir)/config/rules.mk
