--- a/components/src/Makefile.in
+++ b/components/src/Makefile.in
@@ -44,6 +44,7 @@ ifeq ($(OS_ARCH),Darwin)
 LDFLAGS += \
         -framework Carbon \
         -framework AppKit \
+        -framework ApplicationServices \
         $(NULL)
 endif
 
