Added a shell of an implementation for JS weak references. The actual implementation work still needs to be done, right now a new unit test is failing until this is finished.

--- a/components/public/Makefile.in
+++ b/components/public/Makefile.in
@@ -10,7 +10,8 @@ XPIDL_MODULE  = ubiquity
 
 XPI_NAME = ubiquity
 
-XPIDLSRCS = nsIUbiquity.idl \
+XPIDLSRCS = nsIJSWeakRef.idl \
+            nsIUbiquity.idl \
             nsIUbiquityDesktopIntegration.idl \
             $(NULL)
 
