--- a/components/src/Makefile.in
+++ b/components/src/Makefile.in
@@ -23,7 +23,8 @@ REQUIRES	= \
 		  dom \
 		  $(NULL)
 
-CPPSRCS = nsUbiquity.cpp \
+CPPSRCS = nsJSWeakRef.cpp \
+          nsUbiquity.cpp \
           ubiquitymodule.cpp \
           $(NULL)
 
