Removed nsJSWeakRef.  Since it only works w/ the version of the platform that it was compiled for and it's only really useful for debugging ubiquity core, I think it'll be more useful to include it as a separate addon that any extension developer can use (and that they can go through the trouble of finding the right .xpi for their OS/platform version).
This means that a binary xpcom component now only exists for OS X--nsUbiquityDesktopIntegration.

--- a/components/public/Makefile.in
+++ b/components/public/Makefile.in
@@ -10,8 +10,7 @@ XPIDL_MODULE  = ubiquity
 
 XPI_NAME = ubiquity
 
-XPIDLSRCS = nsIJSWeakRef.idl \
-            nsIUbiquityDesktopIntegration.idl \
+XPIDLSRCS = nsIUbiquityDesktopIntegration.idl \
             $(NULL)
 
 include $(topsrcdir)/config/rules.mk
