--- a/components/src/Makefile.in
+++ b/components/src/Makefile.in
@@ -15,16 +15,9 @@ USE_STATIC_LIBS = 1
 XPI_NAME = ubiquity
 
 REQUIRES	= \
-		  xpcom \
-		  string \
-		  js \
-		  xpconnect \
-		  caps \
-		  dom \
 		  $(NULL)
 
-CPPSRCS = nsJSWeakRef.cpp \
-          ubiquitymodule.cpp \
+CPPSRCS = ubiquitymodule.cpp \
           $(NULL)
 
 ifeq ($(OS_ARCH),Darwin)
@@ -35,7 +28,6 @@ endif
 include $(topsrcdir)/config/rules.mk
 
 EXTRA_DSO_LDOPTS += \
-    $(MOZ_JS_LIBS) \
     $(XPCOM_GLUE_LDOPTS) \
     $(NSPR_LIBS) \
     $(NULL)
