--- a/ubiquity/chrome/content/bespin/manifest.json
+++ b/ubiquity/chrome/content/bespin/manifest.json
@@ -1,3 +1,3 @@
-{"plugins": ["embedded", "javascript", "command_line", "uicommands"]
-,"jquery": "global"
-}
+{"plugins":
+ ["embedded", "command_line", "uicommands", "editing_commands", "js_syntax"]
+,"jquery": "global"}
